responsive: Fix horizontal scrolling in mobile (#1746)
* fix horizontal scrolling

--- a/static/css/legacy.less
+++ b/static/css/legacy.less
@@ -2882,13 +2882,20 @@ div.measurements {
 }
 
 /* PAGE HISTORY */
-
-.historyPager {
-  text-align: center;
-  margin: 20px 0;
-  width: 848px;
+@media screen and (max-width: @width-breakpoint-desktop){
+  .historyPager {
+    text-align: center;
+    margin: 20px 0;
+    width: 848px;
+  }
 }
-
+@media screen and (max-width: @width-breakpoint-tablet){
+  .historyPager {
+    text-align:center;
+    margin: 20px 0;
+    width: 100%;
+  }
+}
 div#admin {
   &Twitter {
     width: 300px;
